--- a/ertuğrul gör/KPI Hesaplama.html
+++ b/ertuğrul gör/KPI Hesaplama.html
@@ -3,169 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hata Kodu Analiz Aracı</title>
+    <title>KPI Hesaplama</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f5f5f5;
-        }
-        .container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            color: #333;
-            text-align: center;
-            margin-bottom: 30px;
-        }
-        .file-input-area {
-            border: 2px dashed #ccc;
-            border-radius: 8px;
-            padding: 40px;
-            text-align: center;
-            margin-bottom: 20px;
-            transition: border-color 0.3s;
-            background-color: #f9f9f9;
-        }
-        .file-input-area.active {
-            border-color: #4CAF50;
-            background-color: #e8f5e9;
-        }
-        .file-input-area h3 {
-            margin-top: 0;
-            color: #555;
-        }
-        .file-input-area p {
-            color: #666;
-            margin-bottom: 15px;
-        }
-        #fileInput {
-            display: none;
-        }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        .date-filter {
-            margin: 20px 0;
-            padding: 15px;
-            background-color: #f0f0f0;
-            border-radius: 8px;
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            gap: 15px;
-        }
-        .date-filter label {
-            font-weight: bold;
-            margin-right: 10px;
-        }
-        .date-filter input[type="date"] {
-            padding: 8px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-        .results-container {
-            margin-top: 0px;
-        }
-        .results-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 0px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 12px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-            font-weight: bold;
-        }
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
-        tr:hover {
-            background-color: #f1f1f1;
-        }
-        .chart-container {
-            margin-top: 0px;
-            height: 450px;
-            margin-bottom: 60px;
-        }
-        .chart-options {
-            display: flex;
-            justify-content: center;
-            gap: 5px;
-            margin-bottom: 10px;
-        }
-        .chart-options button {
-            padding: 6px 10px;
-            background-color: #f0f0f0;
-            color: #333;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: all 0.2s;
-        }
-        .chart-options button:hover {
-            background-color: #e0e0e0;
-        }
-        .chart-options button.active {
-            background-color: #4CAF50;
-            color: white;
-            border-color: #4CAF50;
-        }
-        .error-message {
-            color: #d32f2f;
-            background-color: #ffebee;
-            padding: 10px;
-            border-radius: 4px;
-            margin-top: 10px;
-            display: none;
-        }
-        .success-message {
-            color: #2e7d32;
-            background-color: #e8f5e9;
-            padding: 10px;
-            border-radius: 4px;
-            margin-top: 10px;
-            display: none;
-        }
-        .spinner {
-            border: 4px solid rgba(0, 0, 0, 0.1);
-            width: 36px;
-            height: 36px;
-            border-radius: 50%;
-            border-left-color: #4CAF50;
-            animation: spin 1s linear infinite;
-            display: none;
-            margin: 20px auto;
-        }
+        body {font-family: Arial, sans-serif;line-height: 1.6;max-width: 1200px;margin: 0 auto;padding: 20px;background-color: #f5f5f5;}
+        .container {background-color: white;padding: 20px;border-radius: 8px;box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);}
+        h1 {color: #333;text-align: center;margin-bottom: 30px;}
+        .file-input-area {border: 2px dashed #ccc;border-radius: 8px;padding: 40px;text-align: center;margin-bottom: 20px;transition: border-color 0.3s;background-color: #f9f9f9;}
+        .file-input-area.active {border-color: #4CAF50;background-color: #e8f5e9;}
+        .file-input-area h3 {margin-top: 0;color: #555;}
+        .file-input-area p {color: #666;margin-bottom: 15px;}
+        #fileInput {display: none;}
+        button {background-color: #4CAF50;color: white;border: none;padding: 10px 20px;border-radius: 4px;cursor: pointer;font-size: 16px;transition: background-color 0.3s;}
+        button:hover {background-color: #45a049;}
+        .date-filter {margin: 20px 0;padding: 15px;background-color: #f0f0f0;border-radius: 8px;display: flex;flex-wrap: wrap;align-items: center;gap: 15px;}
+        .date-filter label {font-weight: bold;margin-right: 10px;}
+        .date-filter input[type="date"] {padding: 8px;border: 1px solid #ddd;border-radius: 4px;}
+        .results-container {margin-top: 0px;}
+        .results-header {display: flex;justify-content: space-between;align-items: center;margin-bottom: 0px;}
+        table {width: 100%;border-collapse: collapse;margin-top: 20px;}
+        th, td {border: 1px solid #ddd;padding: 12px;text-align: left;}
+        th {background-color: #f2f2f2;font-weight: bold;}
+        tr:nth-child(even) {background-color: #f9f9f9;}
+        tr:hover {background-color: #f1f1f1;}
+        .chart-container {margin-top: 0px;height: 450px;margin-bottom: 60px;}
+        .chart-options {display: flex;justify-content: center;gap: 5px;margin-bottom: 10px;}
+        .chart-options button {padding: 6px 10px;background-color: #f0f0f0;color: #333;border: 1px solid #ddd;border-radius: 4px;cursor: pointer;transition: all 0.2s;}
+        .chart-options button:hover {background-color: #e0e0e0;}
+        .chart-options button.active {background-color: #4CAF50;color: white;border-color: #4CAF50;}
+        .error-message {color: #d32f2f;background-color: #ffebee;padding: 10px;border-radius: 4px;margin-top: 10px;display: none;}
+        .success-message {color: #2e7d32;background-color: #e8f5e9;padding: 10px;border-radius: 4px;margin-top: 10px;display: none;}
+        .spinner {border: 4px solid rgba(0, 0, 0, 0.1);width: 36px;height: 36px;border-radius: 50%;border-left-color: #4CAF50;animation: spin 1s linear infinite;display: none;margin: 20px auto;}
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
@@ -174,8 +44,7 @@
 </head>
 <body>
     <div class="container">
-            <h1>Hata Kodu Analiz Aracı</h1>
-        
+            <h1>KPI Hesaplama Dosyası</h1>
         <div class="file-input-area" id="dropArea">
             <h3>Excel Dosyanızı Yükleyin</h3>
             <p>Dosyayı buraya sürükleyin veya dosya seçme diyaloğunu kullanın</p>
